@@ -1,2 +1,0 @@
-def json_to_list(json):
-    return None
